Parte de la funcionalidad de agregar junto con algunas pruebas

--- a/trabajador/templates/lista_trabajador.html
+++ b/trabajador/templates/lista_trabajador.html
@@ -21,7 +21,7 @@
                 <td>{{trabajador.nombre}}</td>
                 <td>
                     <a href="{% url "eliminar_trabajador" trabajador.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-                    <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-success btn-sm">Editar</a>
+                    <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-success btn-sm">Modificar</a>
                 </td>
             </tr>
         {% endfor %}
