--- a/login/templates/login/iniciar.html
+++ b/login/templates/login/iniciar.html
@@ -1,16 +1,53 @@
-{% extends 'base.html' %}
-{% load static %}
+{% extends 'base.html' % }
+{% load static % }
 
-{% block title %}Ingresar{% endblock %}
+{% block style % }
+<div class = "bg-image" >
+</div >
+{% endblock style % }
 
-{% block contenido %}
-<h1 align="center">Iniciar Sesi&oacute;n</h1>
-    {% if mensaje %}
-        {{mensaje}}
-    {% endif %}
-    <form method="post" class="form " align="center">
-        {% csrf_token %}
-        {{ form.as_p }}
-    <button type="submit" class="btn btn-primary">Ingresar</button>
-    </form>
-{% endblock contenido %}
+{% block contenido % }
+<div class = "row justify-content-center" >
+   <div class = "card col-4 space shadow" >
+       <div class = "card-body" >
+            <h1 class = "card-title" > Iniciar Sesión < /h1 >
+            <form method = "post" class = "form" >
+                {% csrf_token % }
+                {% if form.non_field_errors % }
+                   <ul class = 'form-errors list-unstyled' >
+                        {% for error in form.non_field_errors % }
+                            <li class = "text-danger" > {{error}} < /li >
+                        {% endfor % }
+                    </ul >
+                { % endif % }
+
+                <div class = "form-group" >
+                    <label for = "id_username" > Usuario</label>
+                    {{form.username}}
+                    { % if form.username.errors % }
+                       <ul class = 'form-errors list-unstyled' >
+                            { % for error in form.username.errors % }
+                                <li class = "text-danger" > {{ error }}</li>
+                            { % endfor % }
+                        </ul >
+                    { % endif % }
+                </div >
+                <div class = "form-group" >
+                    <label for = "id_password" > Contraseña</label>
+                    {{form.password}}
+                    { % if form.password.errors % }
+                       <ul class = 'form-errors list-unstyled' >
+                            { % for error in form.password.errors % }
+                                <li class = "text-danger" > {{ error }}</li>
+                            { % endfor % }
+                        </ul >
+                    { % endif % }
+                </div >
+                <div class = "d-flex flex-row-reverse" >
+                    <button type = "submit" class = "btn btn-primary">Ingresar</button>
+                </div >
+            </form >
+        </div >
+    </div >
+</div >
+{ % endblock contenido % }
