--- a/trabajador/templates/lista_trabajador.html
+++ b/trabajador/templates/lista_trabajador.html
@@ -4,37 +4,43 @@
 
 <div class="row pt-5">
     <div class="col">
-        <h1>Lista Trabajadores</h1>
+        <h1>Lista de Trabajadores</h1>
     </div>
     <div class="col align-self-end">
-        <a href="{% url "agregar_trabajador" %}" class="btn btn-primary bt-sm float-right">Agregar Trabajador</a>
+        <a href="{% url "agregar_trabajador" %}" class="btn btn-success bt-sm float-right">Agregar Trabajador</a>
     </div>
 </div>
 <div class="row mt-3">
     <div class="col">
-        <table class="table table-striped table-dark">
-            <thead class="thead-dark">
-                <th>ID Trabajador</th>
-                <th>Paterno</th>
-                <th>Materno</th>
-                <th>Nombre</th>
-                <th>Opciones</th>
-            </thead>
-            <tbody>
-                {% for trabajador in trabajadores %}
-                    <tr>
-                        <td>{{trabajador.id}}</td>
-                        <td>{{trabajador.paterno}}</td>
-                        <td>{{trabajador.materno}}</td>
-                        <td>{{trabajador.nombre}}</td>
-                        <td>
-                            <a href="{% url "eliminar_trabajador" trabajador.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-                            <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-success btn-sm">Editar</a>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+        {% if trabajadores|length == 0 %}
+            <h4>No hay registros</h4>
+        {% else %}
+            <table class="table table-dark rounded-lg shadow r-click">
+                <thead class="thead-dark">
+                    <th>Paterno</th>
+                    <th>Materno</th>
+                    <th>Nombre</th>
+                    <th>RFC</th>
+                    <th class="text-center">Opciones</th>
+                </thead>
+                <tbody>
+
+                    {% for trabajador in trabajadores %}
+                        <tr>
+                            <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.paterno}}</a></td>
+                            <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.materno}}</a></td>
+                            <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.nombre}}</a></td>
+                            <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.rfc}}</a></td>
+                            <td class="text-center">
+                                <a href="{% url "eliminar_trabajador" trabajador.id %}" class="btn btn-danger btn-sm mr-4">Eliminar</a>
+                                <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-primary btn-sm">Editar</a>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                    
+                </tbody>
+            </table>
+        {% endif %}
     </div>
 </div>
 
