--- a/trabajador/templates/buscar_trabajador.html
+++ b/trabajador/templates/buscar_trabajador.html
@@ -4,45 +4,43 @@
 
 <div class="row pt-5">
     <div class="col">
-        <h3>Resultados de busqueda</h3>
+        <h1>Resultados de busqueda</h1>
         {% if trabajadores|length > 0 %}
-        <p>{{ trabajadores|length }} resultados.</p>
+        <h4>{{ trabajadores|length }} {% if trabajadores|length > 1 %}resultados.{% else %}resultado.{% endif %}</h4>
         {% endif %}
     </div>
     <div class="col align-self-end">
-        <a href="{% url "agregar_trabajador" %}" class="btn btn-primary bt-sm float-right">Agregar Trabajador</a>
+        <a href="{% url "agregar_trabajador" %}" class="btn btn-success bt-sm float-right">Agregar Trabajador</a>
     </div>
 </div>
 <div class="row mt-3">
     <div class="col">
         {% if trabajadores|length > 0 %}
-        <table class="table table-striped table-dark">
+        <table class="table table-dark">
             <thead class="thead-dark">
-                <th>ID Trabajador</th>
                 <th>Paterno</th>
                 <th>Materno</th>
                 <th>Nombre</th>
                 <th>RFC</th>
-                <th>Opciones</th>
+                <th class="text-center">Opciones</th>
             </thead>
             <tbody>
                 {% for trabajador in trabajadores %}
                     <tr>
-                        <td>{{trabajador.id}}</td>
-                        <td>{{trabajador.paterno}}</td>
-                        <td>{{trabajador.materno}}</td>
-                        <td>{{trabajador.nombre}}</td>
-                        <td>{{trabajador.rfc}}</td>
-                        <td>
-                            <a href="{% url "eliminar_trabajador" trabajador.id %}" class="btn btn-danger btn-sm">Eliminar</a>
-                            <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-success btn-sm">Editar</a>
+                        <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.paterno}}</a></td>
+                        <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.materno}}</a></td>
+                        <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.nombre}}</a></td>
+                        <td><a class="text-white" href="{% url "ver_trabajador" trabajador.id %}">{{trabajador.rfc}}</a></td>
+                        <td class="text-center">
+                            <a href="{% url "eliminar_trabajador" trabajador.id %}" class="btn btn-danger btn-sm mr-4">Eliminar</a>
+                            <a href="{% url "modificar_trabajador" trabajador.id %}" class="btn btn-primary btn-sm">Editar</a>
                         </td>
                     </tr>
                 {% endfor %}
             </tbody>
         </table>
         {% else %}
-        <h2>No hay resultados</h2>
+        <h4>No hay resultados</h4>
         {% endif %}
     </div>
 </div>
