--- a/trabajador/templates/agregar_trabajador.html
+++ b/trabajador/templates/agregar_trabajador.html
@@ -281,7 +281,7 @@
                     <div class="form-row justify-content-center">
                         <div class="form-group col-md-3">
                             <label for="id_nss">
-                                *{{form.nss.label}}
+                                {{form.nss.label}}
                             </label>
                             {{form.nss}}
                             {% for error in form.nss.errors %}
@@ -292,7 +292,7 @@
                         </div>
                         <div class="form-group col-md-3">
                             <label for="id_no_issste">
-                                *{{form.no_issste.label}}
+                                {{form.no_issste.label}}
                             </label>
                             {{form.no_issste}}
                             {% for error in form.no_issste.errors %}
