--- a/trabajador/templates/modificar_trabajador.html
+++ b/trabajador/templates/modificar_trabajador.html
@@ -308,7 +308,7 @@
                 </div>
             </div>
 
-            <div class="d-flex flex-row-reverse">
+            <div class="d-flex flex-row-reverse mb-3">
                 <a href="{% url "lista_trabajador" %}" class="btn btn-secondary ml-2">Cancelar</a>
                 <button type="submit" class="btn btn-primary">Actualizar</button>
             </div>
