--- a/usuario/templates/confirm_delete_user.html
+++ b/usuario/templates/confirm_delete_user.html
@@ -24,12 +24,8 @@
                 {% csrf_token %}
                 <div class="d-flex justify-content-end pt-4">
                     <input type="submit" value="Eliminar" class="btn btn-danger mr-2">
-                    <button
-                        onClick="javascript:history.go(-1);"
-                        class="btn btn-secondary"
-                    >
-                        Regresar
-                    </button>
+                    <a href="{% url 'lista_usuario' %}" class="btn btn-secondary">Regresar</a>
+                    
                 </div>
             </form>
         </div>
