--- a/usuario/templates/lista_usuario.html
+++ b/usuario/templates/lista_usuario.html
@@ -2,42 +2,42 @@
 
 {% block contenido %}
 
-<div class="row pt-5 justify-content-center">
-    <div class="col-10">
+<div class="row pt-5">
+    <div class="col">
         <h1>Lista de Usuarios</h1>
     </div>
-    <div class="col-10 align-self-end">
+    <div class="col align-self-end">
         <a href="{% url "agregar_usuario" %}" class="btn btn-success bt-sm float-right">Agregar Usuario</a>
     </div>
 </div>
-<div class="row mt-3 justify-content-center">
-    <div class="col-10">
+<div class="row mt-3">
+    <div class="col">
         {% if usuarios|length == 0 %}
             <h4>No hay usuarios</h4>
         {% else %}
-            <table class="table table-dark rounded-lg shadow">
+            <table class="table table-dark rounded-lg shadow r-click">
                 <thead class="thead-dark">
                     <th>Usuario</th>
-                    <th>Email</th>
+                    <th>Correo Electronico</th>
                     <th class="text-center">Admin</th>
                     <th class="text-center">Opciones</th>
                 </thead>
                 <tbody>
 
                     {% for usuario in usuarios %}
-                        <tr>
+                        <tr onclick="verDetalle({{usuario.id}})">
                             <td>{{usuario.username}}</td>
                             <td>{{usuario.email}}</td>
                             <td class="text-center">
-                                <input type="checkbox" id="id_is_superuser" disabled
-                                    {% if usuario.is_superuser == 1 %}
-                                      checked
-                                    {% endif %}
-                                >
+                                {% if usuario.is_superuser == 1 %}
+                                    Si
+                                {% else %}
+                                    No
+                                {% endif %}
                             </td>
                             <td class="text-center">
-                                <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger btn-sm mr-4">Eliminar</a>
-                                <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary btn-sm">Editar</a>
+                                <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary btn-sm mr-4">Editar</a>
+                                <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger btn-sm">Eliminar</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -47,5 +47,11 @@
         {% endif %}
     </div>
 </div>
+
+<script>
+    function verDetalle(id){
+        console.log(id);
+    }
+</script>
 
 {% endblock contenido %}
