--- a/trabajador/templates/ver_trabajador.html
+++ b/trabajador/templates/ver_trabajador.html
@@ -344,7 +344,7 @@
                     </div>
                     <div class="form-group col-md-4">
                         <label for="id_email">
-                            Correo Electronico
+                            Correo Electrónico
                         </label>
                         <input
                             disabled
