--- a/usuario/templates/lista_usuario.html
+++ b/usuario/templates/lista_usuario.html
@@ -18,7 +18,7 @@
             <table class="table table-dark rounded-lg shadow r-click">
                 <thead class="thead-dark">
                     <th>Usuario</th>
-                    <th>Correo Electronico</th>
+                    <th>Correo Electrónico</th>
                     <th class="text-center">Admin</th>
                     <th class="text-center">Opciones</th>
                 </thead>
