--- a/usuario/templates/lista_usuario.html
+++ b/usuario/templates/lista_usuario.html
@@ -25,7 +25,7 @@
                 <tbody>
 
                     {% for usuario in usuarios %}
-                        <tr>
+                        <tr onclick="verDetalle({{usuario.id}})" class="clickable">
                             <td>{{usuario.username}}</td>
                             <td>{{usuario.email}}</td>
                             <td class="text-center">
@@ -36,8 +36,8 @@
                                 {% endif %}
                             </td>
                             <td class="text-center">
-                                <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary btn-sm mr-4">Editar</a>
-                                <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger btn-sm">Eliminar</a>
+                                <a href="{% url "eliminar_usuario" usuario.id %}" class="btn btn-danger btn-sm mr-4">Eliminar</a>
+                                <a href="{% url "modificar_usuario" usuario.id %}" class="btn btn-primary btn-sm">Editar</a>
                             </td>
                         </tr>
                     {% endfor %}
@@ -47,5 +47,14 @@
         {% endif %}
     </div>
 </div>
+
+<script>
+    function verDetalle(id){
+
+        var url = "{% url 'ver_usuario' 3435 %}";
+
+        document.location.href = url.replace('3435', id);
+    }
+</script>
 
 {% endblock contenido %}
