--- a/trabajador/templates/ver_trabajador.html
+++ b/trabajador/templates/ver_trabajador.html
@@ -83,7 +83,7 @@
                                             disabled
                                             type="text"
                                             class="form-control form-control-sm"
-                                            value="{{usuario.username}}"
+                                            value="{{trabajador.alta_usuario}}"
                                         />
                                     </div>
                                     <div class="form-group make-form-short">
